--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&family=Oswald:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/all.min.css" />
     <!-- fontawesome -->
     <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="css/tailwind.css" />
-    <link rel="stylesheet" href="css/tooplate-antique-cafe.css" />
+    <link rel="stylesheet" href="assets/css/tailwind.css" />
+    <link rel="stylesheet" href="assets/css/tooplate-antique-cafe.css" />
 
     <!--Tooplate 2126 Antique Cafe https://www.tooplate.com/view/2126-antique-cafe-->
   </head>
@@ -23,9 +23,9 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/parallax.min.js"></script>
-    <script src="js/jquery.singlePageNav.min.js"></script>
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/parallax.min.js"></script>
+    <script src="assets/js/jquery.singlePageNav.min.js"></script>
     <script>
       function checkAndShowHideMenu() {
         if (window.innerWidth < 768) {
